CHR-36 Add path prefix to each endpoint
Added the /api/v1/report path prefix to every endpoint. Also tweaked how the endpoints are registered in router.go
